# AbsractVM

./: .gitignore  AbstractVM  CMakeCache.txt  CMakeLists.txt  Makefile  abstract-vm-16bits  cmake_install.cmake  ima-x86_64-Linux  utils.py
asm-files/: snake.ass
cmake/: FindANTLR.cmake
generated-sources/: VMGrammar.interp  VMGrammar.tokens  VMGrammarBaseListener.cpp  VMGrammarBaseListener.h  VMGrammarBaseVisitor.cpp  VMGrammarBaseVisitor.h  VMGrammarLexer.cpp  VMGrammarLexer.h  VMGrammarLexer.interp  VMGrammarLexer.tokens  VMGrammarListener.cpp  VMGrammarListener.h  VMGrammarParser.cpp  VMGrammarParser.h  VMGrammarVisitor.cpp  VMGrammarVisitor.h  VMLexer.cpp  VMLexer.h
grammar/: VMGrammar.g4
grammar/.antlr/: VMGramLexer.java  VMGramLexer.tokens  VMGrammar.interp  VMGrammar.tokens  VMGrammarBaseListener.java  VMGrammarLexer.interp  VMGrammarLexer.java  VMGrammarLexer.tokens  VMGrammarListener.java  VMGrammarParser.java  VMLexer.java  VMLexerLexer.java  VMParser.cpp  VMParser.h  VMParser.interp  VMParser.java  VMParser.tokens  VVMGrammarLexer.interp  VVMGrammarLexer.java
include/: Debugger.hpp  IInstruction.hpp  IOperand.hpp  ImmediateOperand.hpp  LabelOperand.hpp  Memory_AddressOperand.hpp  Operand.hpp  Program.hpp  RRegOperand.hpp  StringLiteralOperand.hpp  VMListener.hpp  includes.hpp
include/instructions/: ADD.hpp  ADDSP.hpp  BRA.hpp  BSR.hpp  CMP.hpp  DIV.hpp  ERROR.hpp  HALT.hpp  IInstruction.hpp  LEA.hpp  LOAD.hpp  Label.hpp  MUL.hpp  NEW.hpp  OPP.hpp  PEA.hpp  POP.hpp  PUSH.hpp  QUO.hpp  REM.hpp  RFLOAT.hpp  RINT.hpp  RTS.hpp  STORE.hpp  SUB.hpp  SUBSP.hpp  TSTO.hpp  WADDR.hpp  WFLOAT.hpp  WINT.hpp  WNL.hpp  WSTR.hpp
include/machine/: EnvRegisters.hpp  (+7 more)
perf/: pero.sh
src/: Debugger.cpp  Program.cpp  VMListener.cpp  main.cpp
tests/: Data_transfer.S  RINT.S  add_foat_int.S  arth.S  arth.s  complex_op.S  factorial.S  fun.S  helloworld.ass  helloworld.assu  launch_test.sh  mem.S  mem_addr.S  null.S  over_reg_use.S  saturation_registres_mult.S  stack.S  test-edge-cases.ass  test_Bcc.S  test_Scc.S  test_bra.S  while.S
(+394 files in other folders)
